feat: add notification for finish all goals

--- a/src/sass/abstract/_constants.scss
+++ b/src/sass/abstract/_constants.scss
@@ -13,3 +13,4 @@ $color-letter: green;
 $short-stat-background: #ffffff;
 $short-stat-border-color: #80808080;
 $short-stat-button-color: #19396e;
+$short-stat-error-text: #ff5722;
