--- a/src/sass/layouts/_dictionary-layout.scss
+++ b/src/sass/layouts/_dictionary-layout.scss
@@ -141,49 +141,95 @@
     justify-content: start;
     align-items: center;
     width: 700px;
-    height: 800px;
+    height: 600px;
     padding: 20px 40px;
 
     background-color: white;
     border-radius: 5px;;
   }
 
+  &__image {
+    width: 380px;
+    height: 250px;
+    border-radius: 5px;
+    overflow: hidden;
+    margin-bottom: 1rem;
+  }
+
+  &__word {
+    display: flex;
+    margin-bottom: 1rem;
+
+    &English {
+    font-size: 1.6rem;
+    font-weight: 600;
+    color: #2582e7;
+    text-transform: uppercase;
+    line-height: 1.6;
+    margin-right: 1rem;
+    }
+    &Transcription {
+      font-size: 1.6rem;
+      line-height: 1.6;
+      margin-right: 1rem;
+    }
+    &Translate {
+      text-transform: uppercase;
+      font-size: 1.6rem;
+      line-height: 1.6;
+      margin-right: 1rem;
+    }
+  }
+
+  &__meaning, &__example {
+    font-size: 1.6rem;
+    font-weight: 600;
+    color: #00cdac;
+    text-transform: uppercase;
+    line-height: 1.6;
+    margin-bottom: 1rem;
+  }
+
+  &__textMeaning, &__textExample {
+    display: flex;
+    white-space: pre;
+    font-size: 1.6rem;
+    line-height: 1.6;
+    margin-bottom: 1rem;
+  }
+
+  &__textMeaningTranslate, &__textExampleTranslate {
+    font-size: 1.6rem;
+    line-height: 1.6;
+    margin-bottom: 1rem;
+    overflow: hidden;
+    white-space: nowrap;
+  }
+
+  &__textExample {
+    display: flex;
+    white-space: pre;
+  }
+
+  &__closeBtn {
+    width: 15rem;
+    height: 5rem;
+    border: 1px solid #000000;
+    border-radius: 0.5rem;
+    margin-right: 2rem;
+    text-align: center;
+    padding-top: 1.4rem;
+    cursor: pointer;
+    &:hover {
+      box-shadow: 0 0 4px 1px #00cdac;
+      background-color: #00cdac ;
+    }
+    &_active {
+      box-shadow: 0 0 4px 1px #00cdac;
+    }
+  }
+
   &_hidden {
     display: none;
-  }
-}
-
-.dict-info-close {
-  position: relative;
-  top: 0;
-  right: 0;
-
-  width: 32px;
-  height: 32px;
-  margin-left: 20px;
-
-  cursor: pointer;
-  opacity: .3;
-  &:before,
-  &:after {
-    content: " ";
-    position: absolute;
-    left: 15px;
-
-    width: 2px;
-    height: 33px;
-
-    background-color: white;
-  }
-  &:before {
-    transform: rotate(45deg);
-  }
-  &:after {
-    transform: rotate(-45deg);
-  }
-  &:hover {
-    opacity: 1;
-
-    transition: .3s ease-in-out;
   }
 }
