--- a/src/sass/audiocall.scss
+++ b/src/sass/audiocall.scss
@@ -335,6 +335,7 @@ $var9: #00c45f;
         }
       }
       &__header__image {
+        display: none;
         width: 140px;
         height: 140px;
         margin: 0 auto;
@@ -584,6 +585,67 @@ $var9: #00c45f;
     color: $var3;
 
     opacity: .8;
+  }
+}
+.select {
+  position: absolute;
+  top: 27px;
+  right: 68px;
+
+  display: flex;
+  width: 158px;
+  height: 123px;
+  overflow: hidden;
+
+  font-weight: 700;
+  font-size: 18px;
+  line-height: 24px;
+  color: #ffffff;
+
+  border: solid 1px #c7ccd1;
+  border-radius: 5px;
+  opacity: .8;
+}
+
+.select__content {
+  display: flex;
+  flex-shrink: 0;
+  flex-direction: column;
+  width: 100%;
+  overflow-x: hidden;
+  overflow-y: auto;
+}
+.select__input {
+  display: none;
+
+  &:checked + label {
+    background-color: #d8093a;
+  }
+  &:disabled + label {
+    opacity: .6;
+
+    pointer-events: none;
+  }
+}
+.select__label {
+  display: flex;
+  flex-shrink: 0;
+  align-items: center;
+  height: 40px;
+  padding: 0 16px;
+
+  cursor: pointer;
+
+  transition: all .2s ease-out;
+
+  & + input + & {
+    border-top: 1px solid #c7ccd160;
+  }
+
+  &:hover {
+    color: #ffffff;
+
+    background-color: #d8093a !important;
   }
 }
 .wrapp-flex {
