refactor: move close button in modal

--- a/src/sass/layouts/_dictionary-layout.scss
+++ b/src/sass/layouts/_dictionary-layout.scss
@@ -312,6 +312,9 @@
     width: 100%;
     padding: 10px;
   }
+  .dictModal__closeBtn {
+    margin-top: 2rem;
+  }
 }
 
 @media screen and (max-width: 600px) {
