feat: add playing field layout

--- a/src/sass/layouts/word-search-game/_main.scss
+++ b/src/sass/layouts/word-search-game/_main.scss
@@ -7,7 +7,7 @@
   min-height: calc(100vh - 93px);
 }
 
-.word-search__content {
+.word-search__start-content {
   display: flex;
   flex-direction: column;
   justify-content: center;
