--- a/src/sass/layouts/word-search-game/_start-button.scss
+++ b/src/sass/layouts/word-search-game/_start-button.scss
@@ -1,5 +1,6 @@
-.app__button_word-search {
+.word-search__start-btn {
   background: $dark-main-color;
+  border: 1px solid white;
 
   &:hover {
     color: $main-color;
