feat: add notification about repeat words

--- a/src/sass/abstract/_constants.scss
+++ b/src/sass/abstract/_constants.scss
@@ -8,9 +8,14 @@ $color-modal-settings: linear-gradient(-225deg, #fffeff 0%, #d7fffe 100%);
 $color-incorrect-low: orange;
 $color-incorrect-heavy: red;
 $color-letter: green;
+$color-username: red;
+
+//modal-window
+$modal-background: #ffffff;
+$modal-button-color: #ffffff;
+$modal-button-background-color: #19396e;
+$modal-button-hover-background-color: #ffffff;
 
 //short-stat
-$short-stat-background: #ffffff;
 $short-stat-border-color: #80808080;
-$short-stat-button-color: #19396e;
 $short-stat-error-text: #ff5722;
