feat: add favicon

--- a/src/sass/layouts/_modal-short-stat.scss
+++ b/src/sass/layouts/_modal-short-stat.scss
@@ -6,6 +6,10 @@
     background: url(../assets/svg/medal.svg) center/100px no-repeat;
   }
 
+  &__logo {
+    background: url(../assets/svg/target.svg) center/50px no-repeat;
+  }
+
   &__title {
     margin-bottom: 2rem;
 
