--- a/src/sass/layouts/_dictionary-layout.scss
+++ b/src/sass/layouts/_dictionary-layout.scss
@@ -61,7 +61,7 @@
 .dict {
   &__word-line {
     display: flex;
-    margin-bottom: .5rem;
+    margin-bottom: 1rem;
   }
   &__word-audio {
     width: 2.6rem;
@@ -81,9 +81,9 @@
   &__word-eng-trans {
     display: flex;
     flex: 1;
-    overflow: hidden;
+    // overflow: hidden;
 
-    white-space: nowrap;
+    // white-space: nowrap;
   }
   &__word-english {
     margin-right: 1rem;
@@ -162,7 +162,7 @@
     }
   }
   &__no-words {
-    overflow: hidden;
+    // overflow: hidden;
 
     font-weight: 600;
     font-size: 1.6rem;
@@ -170,36 +170,30 @@
     text-align: center;
     color: #f56714;
     text-transform: uppercase;
-    white-space: nowrap;
+    // white-space: nowrap;
   }
 }
 
 .dictModal {
-  position: fixed;
+  position: absolute;
   top: 0;
   right: 0;
-  bottom: 0;
-  left: 0;
   z-index: 999;
-
   display: flex;
   justify-content: center;
-  align-items: flex-start;
+  align-items: center;
   box-sizing: border-box;
-  width: 100%;
-  max-width: 100%;
-  padding: 36px 16px 16px;
-  overflow: auto;
-
-  background-color: rgba(0, 0, 0, .6);
-  border-radius: 0;
+  width: 100vw;
+  height: 100vh;
+  padding: 10px;
+  background-color: rgba(0, 0, 0, 0.6);
 
   &__body {
     position: relative;
 
     display: flex;
     flex-direction: column;
-    justify-content: start;
+    justify-content: center;
     align-items: center;
     width: 700px;
     height: 600px;
@@ -225,15 +219,15 @@
     &English {
       max-width: 100%;
       margin-right: 1rem;
-      overflow: hidden;
+      // overflow: hidden;
 
       font-weight: 600;
       font-size: 1.6rem;
       line-height: 1.6;
       color: #2582e7;
       text-transform: uppercase;
-      white-space: pre;
-      text-overflow: ellipsis;
+      // white-space: pre;
+      // text-overflow: ellipsis;
     }
     &Transcription {
       margin-right: 1rem;
@@ -268,27 +262,31 @@
 
     font-size: 1.6rem;
     line-height: 1.6;
-    white-space: pre;
+    // white-space: pre;
+    & > p {
+      margin: 0;
+      text-align: justify;
+    }
   }
 
   &__textMeaningTranslate,
   &__textExampleTranslate {
     margin-bottom: 2rem;
-    overflow: hidden;
+    // overflow: hidden;
+    margin-left: 2.6rem;
 
     font-size: 1.6rem;
     line-height: 1.6;
-    white-space: nowrap;
+    // white-space: nowrap;
   }
 
   &__textExample {
     display: flex;
 
-    white-space: pre;
+    // white-space: pre;
   }
 
   &__closeBtn {
-    display: none;
     width: 15rem;
     height: 5rem;
     margin-right: 2rem;
@@ -318,12 +316,6 @@
 }
 
 @media screen and (max-width: 800px) {
-  .ep-close_app {
-    display: none;
-  }
-  .dictModal__closeBtn {
-    display: block;
-  }
   .dictModal__body {
     width: 100%;
     padding: 10px;
@@ -346,7 +338,7 @@
   .dict__word-information {
     width: 2.2rem;
     height: 2.2rem;
-    margin-right: .5rem;
+    // margin-right: .5rem;
   }
   .dict__word-remove,
   .dict__word-restore {
@@ -366,14 +358,18 @@
   .dictModal__textMeaningTranslate,
   .dictModal__textExample,
   .dictModal__textExampleTranslate {
-    max-width: 100%;
+    // max-width: 100%;
     margin-right: .5rem;
-    overflow: hidden;
+    // overflow: hidden;
 
     font-size: 1.4rem;
     line-height: 1.4;
-    white-space: pre;
-    text-overflow: ellipsis;
+    // white-space: pre;
+    // text-overflow: ellipsis;
+  }
+  .dictModal__textMeaningTranslate,
+  .dictModal__textExampleTranslate {
+    margin-left: 2.2rem;
   }
 }
 
@@ -389,7 +385,7 @@
   .dict__word-information {
     width: 1.8rem;
     height: 1.8rem;
-    margin-right: .3rem;
+    margin-right: .4rem;
   }
   .dict__word-remove,
   .dict__word-restore {
@@ -411,14 +407,18 @@
   .dictModal__textExampleTranslate {
     max-width: 100%;
     margin-right: .3rem;
-    overflow: hidden;
+    // overflow: hidden;
 
     font-size: 1rem;
     line-height: 1.8rem;
-    white-space: pre;
-    text-overflow: ellipsis;
+    // white-space: pre;
+    // text-overflow: ellipsis;
   }
   .dictModal__image {
     width: 270px;
+  }
+  .dictModal__textMeaningTranslate,
+  .dictModal__textExampleTranslate {
+    margin-left: 1.8rem;
   }
 }
