feat: finish playing field layout + responsive

--- a/src/sass/layouts/savannah-game/_savannah-constants.scss
+++ b/src/sass/layouts/savannah-game/_savannah-constants.scss
@@ -2,4 +2,7 @@ $main-color: #00c49d;
 $text-color: #fff;
 $wrong-color: rgba(223, 31, 24, 0.753);
 $text-shadow: #023f33;
-$dark-main-color: #065747
+$dark-main-color: #065747;
+$border-color: #9dc7b3;
+$chosen-color: #9dc7b3;
+$hover-color: #51857c;
