--- a/src/sass/sprint-game/style.scss
+++ b/src/sass/sprint-game/style.scss
@@ -1,5 +1,6 @@
 $sprint-border-color: #616161;
-$sprint-words-color: #1c3d5dcc;
+$sprint-words-color: #1c3d5d;
+$print-score-color: #1c3d5d;
 $sprint-star-on: #ffd700;
 $sprint-wrong-color: #e7717d;
 $sprint-right-color: #afd274;
@@ -101,7 +102,6 @@ $print-header-third: #e91e62a2;
 }
 
 // picture -block
-
 .sprint-picture-block {
   position: relative;
 
@@ -182,6 +182,20 @@ $print-header-third: #e91e62a2;
   outline: none;
   box-shadow: 0 2px 5px 0 $sprint-border-color;
   cursor: pointer;
+  &--start,
+  &--repeat {
+    color: #ffffff;
+
+    background-color: $sprint-words-color;
+    border: 1px solid$sprint-words-color;
+
+    &:hover {
+      color: $sprint-words-color;
+
+      background-color: #ffffff;
+      border: 1px solid $sprint-words-color;
+    }
+  }
 }
 .sprint-button--wrong {
   min-width: 40%;
@@ -202,18 +216,18 @@ $print-header-third: #e91e62a2;
   margin-top: 5%;
 
   font-weight: 300;
-  font-size: 3.2rem;
+  font-size: 3rem;
   line-height: 3.2rem;
-  color: $main-color;
+  color: $sprint-words-color;
   text-transform: uppercase;
-  letter-spacing: 13px;
+  letter-spacing: 10px;
 }
 .sprint-final-score {
   margin-bottom: 1rem;
 
-  font-weight: 300;
+  font-weight: 700;
   font-size: 2.5rem;
-  color: $main-color;
+  color: $print-score-color;
 }
 .sprint-statistics {
   align-self: stretch;
@@ -225,8 +239,9 @@ $print-header-third: #e91e62a2;
   color: $main-color;
 }
 .sprint-user-mistakes {
-  margin-bottom: 1rem;
+  margin-bottom: .8rem;
 
+  font-size: 2rem;
   color: $sprint-wrong-color;
 }
 .sprint-mistaken-words {
@@ -257,12 +272,21 @@ $print-header-third: #e91e62a2;
   text-transform: uppercase;
   letter-spacing: 13px;
 }
-.sprint-game-descr,
-.sprint-user-advice {
+.sprint-game-descr {
   margin-bottom: 1%;
 
   color: $sprint-words-color;
 }
+
+.sprint-user-advice {
+  color: $sprint-words-color;
+
+  @include media-tablet {
+    display: none;
+  }
+}
+
+
 .sprint-start-controls {
   display: flex;
   justify-content: center;
@@ -334,10 +358,15 @@ $print-header-third: #e91e62a2;
 
   width: 3.2rem;
   height: 3.2rem;
+
+  opacity: .3;
+
+  &:hover {
+    cursor: pointer;
+    opacity: 1;
+  }
 }
-.closeBtn:hover {
-  cursor: pointer;
-}
+
 .closeBtn::after,
 .closeBtn::before {
   content: "";
@@ -347,7 +376,7 @@ $print-header-third: #e91e62a2;
   width: 2px;
   height: 33px;
 
-  background-color: $main-color;
+  background-color: #ffffff;
 }
 .closeBtn::before {
   transform: rotate(45deg);
@@ -396,4 +425,7 @@ $print-header-third: #e91e62a2;
   &_round {
     top: 95px;
   }
+}
+.sprint-rating .star::before {
+  color: $sprint-words-color;
 }
