change translatin style

--- a/src/sass/components/speak_it/speak_it-inner_container.scss
+++ b/src/sass/components/speak_it/speak_it-inner_container.scss
@@ -1,5 +1,5 @@
 @import "speak_it-constants";
-.translation {
+.speak__translation {
   width: max-content;
   height: 24px;
   margin: 3px auto 0px;
