feat: add correct/wrong word style, add audio sound

--- a/src/sass/layouts/word-search-game/_playing-field.scss
+++ b/src/sass/layouts/word-search-game/_playing-field.scss
@@ -273,6 +273,14 @@
   cursor: pointer;
 }
 
-.chosen-letter {
+.word-search__chosen-letter {
   background: $chosen-color;
+}
+
+.word-search__correct-word {
+  background: $correct-word-color;
+}
+
+.word-search__wrong-word {
+  background: $wrong-color;
 }
