feat: add styles to the right translation and play a word sound

--- a/src/sass/layouts/word-search-game/_playing-field.scss
+++ b/src/sass/layouts/word-search-game/_playing-field.scss
@@ -285,6 +285,12 @@
   background: $wrong-color;
 }
 
+.word-search__correct-translation {
+  background: $hover-color;
+  pointer-events: none;
+  text-decoration: line-through;
+}
+
 .word-search__lives {
   color: $dark-main-color;
 }
